Process on hold orders.